--- a/index.html
+++ b/index.html
@@ -38,11 +38,12 @@
             -webkit-tap-highlight-color: transparent;
         }
         #app {
-            background: linear-gradient(180deg, var(--tg-theme-bg-color) 0%, var(--tg-theme-secondary-bg-color) 100%);
+            background: var(--tg-theme-secondary-bg-color);
         }
         .step {
             transition: transform 0.35s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.35s;
             position: absolute; top: 0; left: 0; width: 100%; height: 100%;
+            background-color: var(--tg-theme-bg-color);
         }
         .step.hidden-right { transform: translateX(100%); opacity: 0; pointer-events: none; }
         .step.hidden-left { transform: translateX(-100%); opacity: 0; pointer-events: none; }
@@ -50,7 +51,6 @@
         
         .animate-in { animation: fadeInUp 0.5s both; }
 
-        /* Стили для списка шаблонов */
         .template-list-item {
             border: 2px solid transparent;
             box-shadow: 0 2px 10px rgba(0,0,0,0.04);
@@ -66,6 +66,22 @@
         }
         .template-list-item.selected .chevron {
             color: var(--tg-theme-button-color);
+        }
+
+        /* Эффект затухания для списка */
+        #template-list {
+            -webkit-mask-image: linear-gradient(to bottom, transparent 0%, black 5%, black 95%, transparent 100%);
+            mask-image: linear-gradient(to bottom, transparent 0%, black 5%, black 95%, transparent 100%);
+        }
+        /* Скрытие скроллбара */
+        #template-list::-webkit-scrollbar,
+        #category-tabs::-webkit-scrollbar { 
+            display: none; 
+        }
+        #template-list,
+        #category-tabs { 
+            -ms-overflow-style: none;  /* IE and Edge */
+            scrollbar-width: none;  /* Firefox */
         }
 
         input[type="file"] { display: none; }
@@ -107,9 +123,6 @@
         .mockup-content {
             padding: 12px; color: var(--tg-theme-hint-color); font-size: 12px;
         }
-        #category-tabs::-webkit-scrollbar { display: none; }
-        #category-tabs { -ms-overflow-style: none; scrollbar-width: none; }
-        
         #final-success-container {
             animation: popIn 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275) both;
         }
@@ -120,15 +133,17 @@
     <div id="app" class="h-screen w-screen relative max-w-md mx-auto">
 
         <!-- Экран 1: Выбор шаблона -->
-        <div id="step-1" class="step active flex flex-col h-full p-4">
-            <div class="text-center mb-4 shrink-0 animate-in" style="animation-delay: 0.1s;">
-                <h1 class="text-2xl font-bold">Создать Mini App</h1>
-                <p class="text-base text-[var(--tg-theme-hint-color)]">Шаг 1: Выберите шаблон</p>
+        <div id="step-1" class="step active flex flex-col h-full">
+            <div class="pt-4">
+                <div class="text-center mb-4 shrink-0 animate-in px-4" style="animation-delay: 0.1s;">
+                    <h1 class="text-2xl font-bold">Создать Mini App</h1>
+                    <p class="text-base text-[var(--tg-theme-hint-color)]">Шаг 1: Выберите шаблон</p>
+                </div>
+                <div id="category-tabs" class="flex space-x-6 border-b border-gray-200 mb-2 overflow-x-auto shrink-0 animate-in pl-4" style="animation-delay: 0.2s;">
+                    <!-- Категории -->
+                </div>
             </div>
-            <div id="category-tabs" class="flex space-x-6 border-b border-gray-200 mb-4 overflow-x-auto shrink-0 animate-in" style="animation-delay: 0.2s;">
-                <!-- Категории -->
-            </div>
-            <div id="template-list" class="flex flex-col gap-2 overflow-y-auto flex-grow pb-20 animate-in" style="animation-delay: 0.3s;">
+            <div id="template-list" class="flex flex-col gap-2 overflow-y-auto flex-grow py-2 px-4 animate-in" style="animation-delay: 0.3s;">
                 <!-- Шаблоны в виде списка -->
             </div>
         </div>
