--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <!-- Подключаем Supabase -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <!-- Подключаем JSZip для создания архива в браузере -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -44,17 +46,9 @@
         .step.active { transform: translateX(0); opacity: 1; visibility: visible; }
         .step.hidden-right { transform: translateX(100%); opacity: 0; }
         .step.hidden-left { transform: translateX(-100%); opacity: 0; }
-        .template-list-item {
-            border: 2px solid transparent;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.05);
-            transition: all 0.25s ease-in-out;
-        }
+        .template-list-item { border: 2px solid transparent; box-shadow: 0 4px 15px rgba(0,0,0,0.05); transition: all 0.25s ease-in-out; }
         .template-list-item:hover { transform: translateY(-2px); box-shadow: 0 6px 20px rgba(0,0,0,0.08); }
-        .template-list-item.selected {
-            border-color: var(--tg-theme-button-color);
-            background-color: color-mix(in srgb, var(--tg-theme-button-color) 8%, transparent);
-            transform: translateY(-2px) scale(1.01);
-        }
+        .template-list-item.selected { border-color: var(--tg-theme-button-color); background-color: color-mix(in srgb, var(--tg-theme-button-color) 8%, transparent); transform: translateY(-2px) scale(1.01); }
         .template-list-item.selected .chevron { color: var(--tg-theme-button-color); transform: translateX(2px); }
         .chevron { transition: color 0.2s, transform 0.2s; }
         .category-tab { transition: all 0.25s; border-bottom: 3px solid transparent; padding-bottom: 10px; white-space: nowrap; }
@@ -70,17 +64,10 @@
         .mockup-logo { width: 32px; height: 32px; border-radius: 9px; background-color: var(--tg-theme-hint-color); object-fit: cover; display: flex; align-items: center; justify-content: center; font-size: 16px; font-weight: 600; color: var(--tg-theme-text-color); }
         .mockup-title { font-weight: 600; font-size: 14px; }
         .mockup-content { font-size: 12px; }
-        #final-success-container { animation: popIn 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275) both; }
-        .success-checkmark-bg { background-color: color-mix(in srgb, var(--tg-theme-button-color) 15%, transparent); color: var(--tg-theme-button-color); }
-        #download-app-btn {
-            background-color: var(--tg-theme-button-color);
-            color: var(--tg-theme-button-text-color);
-            transition: all 0.2s ease-in-out;
-        }
-        #download-app-btn:hover {
-            transform: scale(1.03);
-            box-shadow: 0 8px 25px -5px var(--tg-theme-button-color);
-        }
+        #final-container { animation: popIn 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275) both; }
+        .final-icon-bg { background-color: color-mix(in srgb, var(--tg-theme-button-color) 15%, transparent); color: var(--tg-theme-button-color); }
+        .url-container { background-color: var(--tg-theme-secondary-bg-color); }
+        .copy-btn { background-color: var(--tg-theme-button-color); color: var(--tg-theme-button-text-color); }
     </style>
 </head>
 <body class="overflow-hidden">
@@ -97,7 +84,6 @@
                 <div id="category-tabs" class="flex space-x-6 border-b border-[var(--tg-theme-secondary-bg-color)] mb-2 overflow-x-auto px-5 animate-in" style="animation-delay: 0.2s;"></div>
             </div>
             <div id="template-list" class="flex flex-col gap-3 overflow-y-auto flex-grow p-4 animate-in" style="animation-delay: 0.3s;">
-                <!-- Индикатор загрузки -->
                 <div id="loading-indicator" class="text-center text-[var(--tg-theme-hint-color)] p-8">Загрузка шаблонов...</div>
             </div>
         </div>
@@ -144,17 +130,46 @@
             </div>
         </div>
 
-        <!-- Экран 3: Успех -->
+        <!-- Экран 3: Публикация и результат -->
         <div id="step-3" class="step hidden-right flex flex-col h-full items-center justify-center text-center p-6">
-            <div id="final-success-container" class="flex flex-col items-center">
-                <div class="p-3 rounded-full success-checkmark-bg mb-4">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" /></svg>
+            <div id="final-container" class="w-full max-w-sm">
+                <!-- Состояние загрузки -->
+                <div id="final-loader">
+                    <div class="text-center">
+                        <svg class="animate-spin h-12 w-12 text-[var(--tg-theme-button-color)] mx-auto" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"><circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle><path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path></svg>
+                        <h1 class="text-xl font-bold mt-4">Публикуем...</h1>
+                        <p class="text-base text-[var(--tg-theme-hint-color)] mt-1">Это может занять до 30 секунд.</p>
+                    </div>
                 </div>
-                <h1 class="text-2xl font-bold mb-1.5">Ваш Mini App готов!</h1>
-                <p class="text-[var(--tg-theme-hint-color)] mb-6 text-base max-w-sm">Нажмите кнопку ниже, чтобы скачать готовый <b class="font-bold text-[var(--tg-theme-text-color)]">.html</b> файл.</p>
-                <a id="download-app-btn" href="#" download="mini-app.html" class="w-full max-w-xs text-center font-semibold py-3 px-5 rounded-xl shadow-lg text-sm">
-                    Скачать Mini App
-                </a>
+                <!-- Состояние успеха -->
+                <div id="final-success" class="hidden">
+                    <div class="p-3 rounded-full final-icon-bg inline-block mb-3">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" /></svg>
+                    </div>
+                    <h1 class="text-2xl font-bold mb-1.5">Приложение опубликовано!</h1>
+                    <p class="text-[var(--tg-theme-hint-color)] mb-4 text-base">Ваш Mini App доступен по ссылке ниже.</p>
+                    <div class="url-container flex items-center p-1 rounded-lg">
+                        <input id="final-url" type="text" readonly class="w-full bg-transparent text-sm p-2 text-[var(--tg-theme-text-color)] outline-none">
+                        <button id="copy-url-btn" class="copy-btn rounded-md px-3 py-2 text-sm font-semibold flex-shrink-0">Копировать</button>
+                    </div>
+                    <div class="text-left mt-6">
+                        <h2 class="font-bold text-base">Как добавить в Telegram:</h2>
+                        <ol class="list-decimal list-inside text-sm mt-2 space-y-1.5 text-[var(--tg-theme-text-color)]">
+                            <li>Откройте <b class="font-semibold">@BotFather</b> и отправьте команду <code class="bg-[var(--tg-theme-secondary-bg-color)] p-1 rounded-md text-xs">/mybots</code>.</li>
+                            <li>Выберите вашего бота, затем <b class="font-semibold">Bot Settings &rarr; Menu Button</b>.</li>
+                            <li>Нажмите <b class="font-semibold">Configure Menu Button</b> и отправьте скопированную ссылку.</li>
+                            <li>Придумайте короткое название для кнопки (например, "Запустить").</li>
+                        </ol>
+                    </div>
+                </div>
+                 <!-- Состояние ошибки -->
+                <div id="final-error" class="hidden">
+                     <div class="p-3 rounded-full bg-red-100 text-red-600 inline-block mb-3">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
+                    </div>
+                    <h1 class="text-2xl font-bold mb-1.5">Ошибка публикации</h1>
+                    <p id="error-message" class="text-[var(--tg-theme-hint-color)] text-base">Не удалось загрузить приложение. Проверьте ваш токен Netlify и попробуйте снова.</p>
+                </div>
             </div>
         </div>
 
@@ -163,20 +178,21 @@
     <script>
         document.addEventListener('DOMContentLoaded', () => {
 
-            // ВАШИ ДАННЫЕ SUPABASE
+            // --- НАСТРОЙКА ---
+            // 1. Получите токен здесь: https://app.netlify.com/user/applications#personal-access-tokens
+            // 2. Вставьте его вместо 'ВАШ_ТОКЕН_СЮДА'
+            const NETLIFY_ACCESS_TOKEN = 'nfp_HK1cZHu4GGp17CieZDVuPW6eUnvy8Sbi8300';
+
+            // Ваши данные Supabase
             const SUPABASE_URL = 'https://jvapdhhyjbianlyfwobm.supabase.co'; 
             const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imp2YXBkaGh5amJpYW5seWZ3b2JtIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzOTMxMTEsImV4cCI6MjA3MDk2OTExMX0.XcvGzp18BeA5Sf-_k7nHaZG5J5eB9H9adQEl3ZAa5mY';
 
-            // ИСПРАВЛЕНИЕ: Используем `supabase` (глобальный объект) для создания клиента
-            // и сохраняем его в новую переменную `supabaseClient`.
             const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
             const App = {
-                state: { currentStep: 1, selectedTemplate: null, appName: '', logoDataUrl: null },
+                state: { currentStep: 1, selectedTemplate: null, appName: '', logoDataUrl: null, deployedUrl: null },
                 DOM: {},
-                templatesData: {
-                    "Все": [],
-                },
+                templatesData: { "Все": [] },
 
                 async init() {
                     if (!window.Telegram || !window.Telegram.WebApp) {
@@ -203,7 +219,6 @@
                 async fetchTemplates() {
                     const loadingIndicator = document.getElementById('loading-indicator');
                     try {
-                        // ИСПРАВЛЕНИЕ: Используем `supabaseClient` для запроса.
                         const { data, error } = await supabaseClient
                             .from('mini_app_templates')
                             .select('template_id, name, icon, category, preview_html, html_content');
@@ -231,7 +246,13 @@
                     D.mockupLogoInitials = document.getElementById('mockup-logo-initials');
                     D.mockupTitle = document.getElementById('mockup-title-text');
                     D.mockupContentPreview = document.getElementById('mockup-content-preview');
-                    D.downloadAppBtn = document.getElementById('download-app-btn');
+                    // Элементы финального экрана
+                    D.finalLoader = document.getElementById('final-loader');
+                    D.finalSuccess = document.getElementById('final-success');
+                    D.finalError = document.getElementById('final-error');
+                    D.finalUrlInput = document.getElementById('final-url');
+                    D.copyUrlBtn = document.getElementById('copy-url-btn');
+                    D.errorMessage = document.getElementById('error-message');
                 },
                 
                 prepareTemplates() {
@@ -262,6 +283,7 @@
                     this.DOM.appNameInput.addEventListener('input', this.updatePreview.bind(this));
                     this.DOM.logoUpload.addEventListener('change', this.handleLogoChange.bind(this));
                     this.DOM.removeLogoBtn.addEventListener('click', this.removeLogo.bind(this));
+                    this.DOM.copyUrlBtn.addEventListener('click', this.copyUrl.bind(this));
                     const dropzone = this.DOM.logoDropzone;
                     ['dragenter', 'dragover', 'dragleave', 'drop'].forEach(eventName => dropzone.addEventListener(eventName, e => { e.preventDefault(); e.stopPropagation(); }));
                     dropzone.addEventListener('dragover', () => dropzone.classList.add('dragover'));
@@ -395,16 +417,16 @@
                             break;
                         case 2:
                             this.tg.BackButton.show();
-                            this.tg.MainButton.setText("Создать").show().enable();
+                            this.tg.MainButton.setText("Опубликовать").show().enable();
                             break;
                         case 3:
                             this.tg.BackButton.hide();
-                            this.tg.MainButton.setText("Скачать и закрыть").show().enable();
+                            this.tg.MainButton.setText("Закрыть").show().enable();
                             break;
                     }
                 },
 
-                onMainButtonClick() {
+                async onMainButtonClick() {
                     this.hapticFeedback('medium');
                     switch (this.state.currentStep) {
                         case 1:
@@ -412,16 +434,16 @@
                             break;
                         case 2:
                             if (!this.state.appName) { this.tg.showAlert('Пожалуйста, введите название приложения.'); this.hapticFeedback('error'); return; }
+                            if (!NETLIFY_ACCESS_TOKEN || NETLIFY_ACCESS_TOKEN === 'ВАШ_ТОКЕН_СЮДА') {
+                                this.tg.showAlert('Пожалуйста, укажите ваш токен доступа Netlify в коде.'); this.hapticFeedback('error'); return;
+                            }
                             this.tg.MainButton.showProgress();
-                            setTimeout(() => {
-                                this.tg.MainButton.hideProgress();
-                                this.finalizeApp();
-                                this.showStep(3);
-                            }, 800);
+                            this.showStep(3);
+                            await this.deployToNetlify();
+                            this.tg.MainButton.hideProgress();
                             break;
                         case 3:
-                            this.DOM.downloadAppBtn.click();
-                            setTimeout(() => { this.tg.close(); }, 500);
+                            this.tg.close();
                             break;
                     }
                 },
@@ -429,9 +451,15 @@
                 onBackButtonClick() {
                     this.hapticFeedback('light');
                     if (this.state.currentStep === 2) this.showStep(1, 'backward');
+                    if (this.state.currentStep === 3) {
+                        this.showStep(2, 'backward');
+                        this.DOM.finalSuccess.classList.add('hidden');
+                        this.DOM.finalError.classList.add('hidden');
+                        this.DOM.finalLoader.classList.remove('hidden');
+                    }
                 },
 
-                finalizeApp() {
+                async deployToNetlify() {
                     const template = this.templatesData["Все"].find(t => t.id === this.state.selectedTemplate);
                     if (!template) return;
 
@@ -450,20 +478,59 @@
                         finalLogoBase64 = canvas.toDataURL();
                     }
                     
-                    let finalHtml = template.html_content
+                    const finalHtml = template.html_content
                         .replace(/%%APP_NAME%%/g, this.state.appName)
                         .replace(/%%APP_LOGO_BASE64%%/g, finalLogoBase64)
                         .replace(/%%THEME_PARAMS_JSON%%/g, JSON.stringify(this.tg.themeParams));
 
-                    const blob = new Blob([finalHtml], { type: 'text/html' });
-                    const url = URL.createObjectURL(blob);
-                    const filename = `${this.state.appName.replace(/[^a-z0-9]/gi, '_').toLowerCase() || 'mini-app'}.html`;
-                    this.DOM.downloadAppBtn.href = url;
-                    this.DOM.downloadAppBtn.download = filename;
+                    try {
+                        const zip = new JSZip();
+                        zip.file("index.html", finalHtml);
+                        const zipBlob = await zip.generateAsync({type:"blob"});
+
+                        const response = await fetch("https://api.netlify.com/api/v1/sites", {
+                            method: "POST",
+                            headers: {
+                                "Authorization": `Bearer ${NETLIFY_ACCESS_TOKEN}`,
+                                "Content-Type": "application/zip"
+                            },
+                            body: zipBlob
+                        });
+
+                        if (!response.ok) {
+                            const errorData = await response.json();
+                            throw new Error(errorData.message || `HTTP error! status: ${response.status}`);
+                        }
+
+                        const siteData = await response.json();
+                        this.state.deployedUrl = siteData.ssl_url;
+
+                        this.DOM.finalUrlInput.value = this.state.deployedUrl;
+                        this.DOM.finalLoader.classList.add('hidden');
+                        this.DOM.finalSuccess.classList.remove('hidden');
+                        this.tg.BackButton.hide();
+                        this.hapticFeedback('success');
+
+                    } catch (error) {
+                        console.error("Ошибка деплоя:", error);
+                        this.DOM.errorMessage.textContent = `Не удалось опубликовать: ${error.message}. Проверьте токен и попробуйте снова.`;
+                        this.DOM.finalLoader.classList.add('hidden');
+                        this.DOM.finalError.classList.remove('hidden');
+                        this.tg.BackButton.show();
+                        this.hapticFeedback('error');
+                    }
+                },
+
+                copyUrl() {
+                    this.DOM.finalUrlInput.select();
+                    document.execCommand('copy');
+                    this.DOM.copyUrlBtn.textContent = 'Готово!';
+                    this.hapticFeedback('light');
+                    setTimeout(() => { this.DOM.copyUrlBtn.textContent = 'Копировать'; }, 1500);
                 },
 
                 hapticFeedback(style) {
-                    try { this.tg.HapticFeedback.impactOccurred(style); } catch (e) { /* ignore */ }
+                    try { this.tg.HapticFeedback.notificationOccurred ? this.tg.HapticFeedback.notificationOccurred(style) : this.tg.HapticFeedback.impactOccurred('light'); } catch (e) { /* ignore */ }
                 }
             };
             App.init();
