--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <main class="flex-grow relative overflow-hidden">
             <!-- START: Welcome Screen -->
             <div id="initial-greeting" class="absolute inset-0 flex flex-col items-center justify-center text-center px-4 transition-opacity duration-300 z-10" style="background-color: var(--tg-bg-color);">
-                <h2 id="animated-greeting" class="mb-6">Здравствуйте</h2>
+                <h2 id="animated-greeting" class="mb-6">Привет</h2>
                 <p id="greeting-text" class="text-xl font-semibold mb-4">
                     <!-- Имя пользователя будет вставлено сюда -->
                 </p>
