--- a/index.html
+++ b/index.html
@@ -271,10 +271,10 @@
 
             const GITHUB_APP_ID = '1804701';
             const GITHUB_OAUTH_CLIENT_ID = 'Iv23liMslqqNmYZlMUUb';
-            const GITHUB_OAUTH_CLIENT_SECRET = '7da4ed5f51e4cfd772917e2fac1b1c018b29ef4a'; // <-- 🔴 ЗАМЕНИТЕ
+            const GITHUB_OAUTH_CLIENT_SECRET = '7da4ed5f51e4cfd772917e2fac1b1c018b29ef4a';
             const CORS_PROXY_URL = 'https://cors-anywhere.herokuapp.com/';
-            const NETLIFY_TOKEN = 'nfp_HcEaWZxtyLaos1zC8s3d6arvDqW9674u7678'; // <-- 🔴 ВСТАВЬТЕ
-            const GEMINI_API_KEY = 'AIzaSyBuXjShdZFvr76OKsl7FaL789Dxl3i6bgc'; // <-- 🔴 ВСТАВЬТЕ
+            const NETLIFY_TOKEN = 'nfp_HcEaWZxtyLaos1zC8s3d6arvDqW9674u7678';
+            const GEMINI_API_KEY = 'AIzaSyCeE885TVI3rmRTD5fH43IqwYU-getBnpU';
 
             // --- Конфигурация подписок ---
             const SUBSCRIPTION_LIMITS = {
