--- a/index.html
+++ b/index.html
@@ -269,9 +269,12 @@
             const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRxcHRhemthZGljdWplZG95eWtwIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTU1NTU2ODUsImV4cCI6MjA3MTEzMTY4NX0.FaNU-OlO1yEo7e9ADUCbPWvK0RG90_GedlaXUXUM0Eo';
             const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
-            const GITHUB_APP_ID = '1804701';
-            const GITHUB_OAUTH_CLIENT_ID = 'Iv23liMslqqNmYZlMUUb';
-            const GITHUB_OAUTH_CLIENT_SECRET = '7da4ed5f51e4cfd772917e2fac1b1c018b29ef4a';
+            // --- ОБНОВЛЕННЫЕ ДАННЫЕ GITHUB APP ---
+            const GITHUB_APP_ID = '1807677';
+            const GITHUB_OAUTH_CLIENT_ID = 'Iv23li96yFTkcIaOloCh';
+            const GITHUB_OAUTH_CLIENT_SECRET = '90afeaec97c80e5f955671472c9d57106db41bec';
+            // --- КОНЕЦ ОБНОВЛЕННЫХ ДАННЫХ ---
+            
             const CORS_PROXY_URL = 'https://cors-anywhere.herokuapp.com/';
             const NETLIFY_TOKEN = 'nfp_HcEaWZxtyLaos1zC8s3d6arvDqW9674u7678';
             const GEMINI_API_KEY = 'AIzaSyCeE885TVI3rmRTD5fH43IqwYU-getBnpU';
