--- a/index.html
+++ b/index.html
@@ -699,16 +699,16 @@
                 const limits = SUBSCRIPTION_LIMITS[u.subscription_plan || 'free'];
                 const chatUsage = allChats.length;
                 const chatPercentage = limits.chats === Infinity ? 100 : (chatUsage / limits.chats) * 100;
-                
+
                 let deployedAppsHTML = '<p class="text-sm text-gray-400">У вас пока нет опубликованных приложений.</p>';
                 if (deployedChats.length > 0) {
                     deployedAppsHTML = deployedChats.map(chat => `
-                        <div class="bg-gray-800 p-3 rounded-lg flex justify-between items-center">
-                            <div>
+                        <div class="bg-gray-800 p-3 rounded-lg flex justify-between items-center space-x-2">
+                            <div class="flex-1 w-0">
                                 <p class="font-semibold text-sm truncate">${chat.title || 'Безымянное приложение'}</p>
-                                <a href="${chat.deploy_url}" target="_blank" class="text-xs text-purple-400 truncate">${chat.deploy_url}</a>
+                                <a href="${chat.deploy_url}" target="_blank" class="text-xs text-purple-400 truncate block">${chat.deploy_url}</a>
                             </div>
-                            <button onclick="Telegram.WebApp.openLink('${chat.deploy_url}')" class="text-xs font-bold p-2 rounded-full bg-gray-700 hover:bg-gray-600">
+                            <button onclick="Telegram.WebApp.openLink('${chat.deploy_url}')" class="text-xs font-bold p-2 rounded-full bg-gray-700 hover:bg-gray-600 flex-shrink-0">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" /></svg>
                             </button>
                         </div>
