--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <header class="flex items-center justify-between p-3 flex-shrink-0" style="background-color: var(--tg-header-bg-color);">
             <div class="flex items-center space-x-3">
                 <svg id="menu-button" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 cursor-pointer p-0.5 hover:opacity-80 transition-opacity" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" /></svg>
-                <h1 id="header-title" class="text-xl font-bold truncate max-w-[180px]">Super Devtol</h1>
+                <h1 id="header-title" class="text-xl font-bold truncate max-w-[180px]">devtol</h1>
             </div>
             <div class="flex items-center space-x-3">
                 <div id="header-action-container">
@@ -199,7 +199,7 @@
 
         <main class="flex-grow relative overflow-hidden">
             <div id="initial-greeting" class="absolute inset-0 flex flex-col items-center justify-center text-center px-6 transition-opacity duration-500 z-10" style="background-color: var(--tg-bg-color);">
-                <h2 id="animated-greeting" class="mb-8">Super Devtol</h2>
+                <h2 id="animated-greeting" class="mb-8">devtol</h2>
                 <p id="greeting-text" class="text-2xl font-bold mb-6 tracking-tight"></p>
                 <p class="text-gray-300 max-w-lg text-base mb-8 leading-relaxed">
                     Я могу сгенерировать для вас веб-приложение с фронтендом и бэкендом, а затем вы можете скачать ZIP. Просто опишите свою идею.
@@ -212,7 +212,7 @@
 
         <footer class="p-3 flex-shrink-0 relative shadow-lg">
             <div class="rounded-2xl p-2 flex items-start ring-1 ring-gray-700/50" style="background-color: var(--tg-secondary-bg-color);">
-                <textarea id="message-input" placeholder="Спросить Super Devtol" class="flex-grow bg-transparent focus:outline-none mx-3 text-base pt-2 placeholder-gray-500"></textarea>
+                <textarea id="message-input" placeholder="Спросить devtol" class="flex-grow bg-transparent focus:outline-none mx-3 text-base pt-2 placeholder-gray-500"></textarea>
                 <div id="action-button-container" class="flex-shrink-0 self-end">
                     <button id="send-button" class="p-2 rounded-full transition-all hover:bg-purple-500/20">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" style="color: var(--tg-button-color);" fill="currentColor" viewBox="0 0 24 24"><path d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"/></svg>
