--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
         <main class="flex-grow relative overflow-hidden">
             <div id="initial-greeting" class="absolute inset-0 flex flex-col items-center justify-center text-center px-4 transition-opacity duration-300 z-10" style="background-color: var(--tg-bg-color);">
-                <h2 id="animated-greeting" class="mb-6">4bogfm5jvu74ry6b</h2>
+                <h2 id="animated-greeting" class="mb-6">devtol</h2>
                 <p id="greeting-text" class="text-xl font-semibold mb-4"></p>
                 <p class="text-gray-400 max-w-md text-sm mb-6">
                     Я могу сгенерировать для вас веб-приложение с фронтендом и бэкендом, а затем опубликовать его. Просто опишите свою идею.
